--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   sqflite: ^1.1.0
   intl: ^0.15.8
   fluttertoast: ^3.1.0
+  file_picker: ^1.3.7
+  open_file: ^2.0.3
+  gbk_codec: ^0.3.1
 
 
 dev_dependencies:
