--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ out/
 
 # Gradle files
 .gradle/
+gradlew
+gradlew.bat
+gradle-wrapper.jar
 build/
 
 # Local configuration file (sdk path, etc)
@@ -36,13 +39,6 @@ captures/
 
 # IntelliJ
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/assetWizardSettings.xml
-.idea/dictionaries
-.idea/libraries
-.idea/caches
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
@@ -77,3 +73,18 @@ key.properties
 debug/
 profile/
 *.lock
+GeneratedPluginRegistrant.h
+GeneratedPluginRegistrant.m
+GeneratedPluginRegistrant.java
+
+Podfile
+Podfile.lock
+Pods/
+.symlinks/
+**/Flutter/App.framework/
+**/Flutter/Flutter.framework/
+**/Flutter/Generated.xcconfig
+**/Flutter/flutter_assets/
+ServiceDefinitions.json
+xcuserdata/
+*.xcworkspace
