--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ addons:
       - libstdc++6
       - fonts-droid
 before_script:
-  - git clone https://github.com/flutter/flutter.git -b beta
+  - git clone https://github.com/flutter/flutter.git -b v1.7.8-hotfixes
   - ./flutter/bin/flutter doctor
 script:
   - ./flutter/bin/flutter test
