--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,8 @@
         {
             "label": "buld apk",
             "type": "shell",
-            "command": "flutter build apk --target-platform android-arm"
+            "command": "flutter build apk --target-platform android-arm",
+            "problemMatcher": []
         }
     ]
 }
