--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   open_file: ^2.0.3
   gbk_codec: ^0.3.1
   permission_handler: '^3.2.0'
+  battery: ^0.3.0 
+  device_info: ^0.4.0
 
 
 dev_dependencies:
