--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   battery: ^0.3.0 
   device_info: ^0.4.0
   catcher: ^0.2.0
+  provider: ^3.0.0+1
+  path_provider: 1.1.0
 
 
 dev_dependencies:
